2024-10-14_kubernetes/day1/kubernetes-training/pod_broken_2.yml
apiVersion: v1
kind: Pod
metadata:
  name: broken-2
spec:
  containers:
    - name: main
      image: debian:12-slim
      command: ["sleep", "60"]
      livenessProbe:
            httpGet:
              path: /livez
              port: 8000
            initialDelaySeconds: 0
            failureThreshold: 1
            periodSeconds: 1
      ports:
        - containerPort: 80
      resources:
        requests:
          memory: 10Mi
          cpu: 10m
        limits:
          memory: 20Gi
          cpu: 20m
