2024-10-14_kubernetes/day1/kubernetes-training/counter.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
spec:
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: main
          image: redis
          resources:
            requests:
              cpu: 30m
              memory: 50Mi
            limits:
              cpu: 50m
              memory: 80Mi
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    app: redis
  ports:
    - port: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: counter
spec:
  selector:
    matchLabels:
      app: counter
  replicas: 2
  template:
    metadata:
      labels:
        app: counter
    spec:
      containers:
        - name: main
          image: ghcr.io/ondrejsika/counter
          resources:
            requests:
              cpu: 20m
              memory: 30Mi
            limits:
              cpu: 50m
              memory: 60Mi
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: counter
spec:
  selector:
    app: counter
  ports:
    - port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: counter
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - lab0-counter.k8s.sikademo.com
      secretName: lab0-counter.k8s.sikademo.com-tls
  rules:
    - host: lab0-counter.k8s.sikademo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: counter
                port:
                  number: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: counter-fe
spec:
  selector:
    matchLabels:
      app: counter-fe
  replicas: 2
  template:
    metadata:
      labels:
        app: counter-fe
    spec:
      containers:
        - name: main
          image: ghcr.io/ondrejsika/counter-frontend
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 300Mi
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: counter-fe
spec:
  selector:
    app: counter-fe
  ports:
    - port: 80
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: counter-fe
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - lab0-counter-fe.k8s.sikademo.com
      secretName: lab0-counter-fe.k8s.sikademo.com-tls
  rules:
    - host: lab0-counter-fe.k8s.sikademo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: counter-fe
                port:
                  number: 80
